Ignore EAGAIN reading timerfd in message_pump_android.

EAGAIN should only happen when no timer has expired, but the function
should only be called when a timer expires. And yet, very rarely during
tests, we error with EAGAIN. I have no theories as to why this is
happening. Possibly a platform bug.

Ignoring EAGAIN should be safe, we only read the timer to clear it so
that we don't keep getting called back. If it's already cleared then
we're fine too.

Bug: 872044
Change-Id: I6eb29ab99402d90140bd5b89a26df2aa5e53b1c6
Reviewed-on: https://chromium-review.googlesource.com/1168154
Commit-Queue: Michael Thiessen <mthiesse@chromium.org>
Reviewed-by: Gabriel Charette <gab@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582315}
Former-commit-id: 7c36083d762cfc04d161e605c29bb95229a0bb7e